[project]
name = "brainrot-to-breadwinner"
version = "0.1.0"
description = "Zerve hackathon — Trends / Polymarket / AMZN signals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
